--- a/website/index.html
+++ b/website/index.html
@@ -12,9 +12,10 @@
 
     <!-- Custom CSS -->
     <link href="assets/css/style.css?v0.1" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-dark">
 
     <!-- Navigation -->
     <div class="container-fluid">
