--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         
     </head>
     <body>
-        <div class="container bg-dark">
+        <div class="container">
             <h1 class="mb-5">GIT & Bootstrap Collaborative Project</h1>
             <div class="row">
-                <div class="col-sm-4 bg-dark text-center">
+                <div class="col-sm-4 text-center">
                     <a href="./website/designs/thumb.jpg"><img style="max-height: 400px;" class="img-responsive" src="website/designs/thumb.jpg"></img></a>
                 </div>
                 <div class="col-sm">
